--- a/blog/website/templates/index.html
+++ b/blog/website/templates/index.html
@@ -1,3 +1,4 @@
+<!--
 <h1>
     Blog
     {{ name }}
@@ -20,3 +21,12 @@
     {% endfor %}
     </ol>
 </h1>
+-->
+
+<ul>
+    {% for post in posts %}
+        <h2>{{ post.title}}</h2>
+        <h3>{{ post.sub_title}}</h3>
+        <p>{{ post.content }}</p>
+    {% endfor %}
+</ul>
