--- a/blog/website/templates/index.html
+++ b/blog/website/templates/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="{% static 'images/avatar.jpg' %}" alt="" /></a>
+					<a href="#" class="{% static 'image avatar' %}"><img src="{% static 'images/avatar.jpg' %}" alt="" /></a>
 					<h1><strong>I am Strata</strong>, a super simple<br />
 					responsive site template freebie<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
@@ -54,22 +54,22 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="{% static 'images/thumbs/03.jpg' %}" alt="" /></a>
+								<a href="{% static 'images/fulls/03.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/03.jpg' %}" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="{% static 'images/fulls/04.jpg' %}" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="{% static 'images/fulls/04.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/04.jpg' %}" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+								<a href="{% static 'images/fulls/05.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/05.jpg' %}" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="{% static 'images/fulls/06.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/06.jpg' %}" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
